--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -5,37 +5,55 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Modern Business - Start Bootstrap Template</title>
+    <title>@ViewData["Title"]</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="~/lib/65788.png" />
     <!-- Bootstrap icons-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
+    <link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="~/css/styles.css" rel="stylesheet" />
 </head>
-<body class="d-flex flex-column h-100">
 
-        <main class="flex-shrink-0">
-            @RenderBody()
-        </main>
+<body class="d-flex flex-column h-100">
+    <!-- Navigation-->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container px-5">
+            <a class="navbar-brand" asp-action="Index" asp-controller="Home">Collision Crisis</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    <li class="nav-item"><a class="nav-link" asp-action="Index" asp-controller="Home">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" asp-action="About" asp-controller="Home">About</a></li>
+                    <li class="nav-item"><a class="nav-link" asp-action="Reports" asp-controller="Home">Reports</a></li>
+                    <li class="nav-item"><a class="nav-link" asp-action="Login" asp-controller="Home">Login</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <main class="flex-shrink-0">
+        @RenderBody()
+    </main>
 
     <!-- Footer-->
     <footer class="bg-dark py-4 mt-auto">
         <div class="container px-5">
             <div class="row align-items-center justify-content-between flex-column flex-sm-row">
-                <div class="col-auto"><div class="small m-0 text-white">Copyright &copy; Your Website 2022</div></div>
+                <div class="col-auto"><div class="small m-0 text-white">Copyright &copy; CollisionCrisis 2022</div></div>
                 <div class="col-auto">
-                    <a class="link-light small" asp-action="Privacy">Privacy</a>
+                    <a class="link-light small" asp-controller="Home" asp-action="Privacy">Privacy</a>
                     <span class="text-white mx-1">&middot;</span>
-                    <a class="link-light small" href="#!">Terms</a>
+                    <a class="link-light small" asp-controller="Home" asp-action="Yeet">Yeet</a>
                     <span class="text-white mx-1">&middot;</span>
-                    <a class="link-light small" href="#!">Contact</a>
+                    <a class="link-light small" asp-action="About" asp-controller="Home">About</a>
                 </div>
             </div>
         </div>
     </footer>
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <!-- Core theme JS-->
     <script src="~/js/scripts.js"></script>
 </body>
