--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Collision Crisis";
 }
-
+@model List<CrashNormal>
 
 <!-- Header-->
 <header class="bg-dark py-5">
@@ -21,6 +21,8 @@
         </div>
     </div>
 </header>
+
+
 <!-- Features section-->
 <section class="py-5" id="features">
     <div class="container px-5 my-5">
