--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
     <meta name="author" content="" />
     <title>@ViewData["Title"]</title>
     <!-- Favicon-->
-    <link rel="icon" type="image/x-icon" href="~/lib/65788.png" />
+    <link rel="icon" type="image/x-icon" href="~/lib/logo.png" />
     <!-- Bootstrap icons-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
     <link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
