--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -9,14 +9,15 @@
         <div class="row gx-5 align-items-center justify-content-center">
             <div class="col-lg-8 col-xl-7 col-xxl-6">
                 <div class="my-5 text-center text-xl-start">
-                    <h1 class="display-5 fw-bolder text-white mb-2">Collision Crisis in Utah</h1>
+                    <img src="~/lib/FullLogo3.png" width="200" height="200"/>
+                    <h1 class="display-5 fw-bolder text-white mb-2">Utah Collision Crisis</h1>
                     <p class="lead fw-normal text-white-50 mb-4">Utah has a unique set of challenges when it comes to motor vehicle accidents. We aim to help you understand these challenges and find lasting solutions</p>
                     <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xl-start">
                         <a class="btn btn-outline-light btn-lg px-4" asp-action="Reports" asp-controller="Home">View The Data</a>
                     </div>
                 </div>
             </div>
-            <div class="col-xl-5 col-xxl-6 d-none d-xl-block text-center"><img class="img-fluid rounded-3 my-5" src="~/lib/crash.JPG.jpg" alt="Provo Car Crash" /></div>
+            <div class="col-xl-5 col-xxl-6 d-none d-xl-block text-center"><img class="img-fluid rounded-3 my-5" src="~/lib/crash.JPG.jpg" alt="Provo Car Crash" style="width:100%" /></div>
 
         </div>
     </div>
