--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
     <meta name="author" content="" />
     <title>@ViewData["Title"]</title>
     <!-- Favicon-->
-    <link rel="icon" type="image/x-icon" href="~/lib/65788.png" />
+    <link rel="icon" type="image/x-icon" href="~/lib/Logo.png" />
     <!-- Bootstrap icons-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
     <link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
@@ -19,7 +19,10 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container px-5">
-            <a class="navbar-brand" asp-action="Index" asp-controller="Home">Collision Crisis</a>
+            <a class="navbar-brand" asp-action="Index" asp-controller="Home">
+                Collision Crisis
+                <img src="~/lib/Logo.png" width="20" height="20" />
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
