--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -31,10 +31,11 @@
             </div>
         </div>
     </nav>
-    <main class="flex-shrink-0">
-        @RenderBody()
-    </main>
-
+    <div class="row m-1 p-1">
+        <main >
+            @RenderBody()
+        </main>
+    </div>
     <!-- Footer-->
     <footer class="bg-dark py-4 mt-auto">
         <div class="container px-5">
