--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using CollisionCrisis
 @using CollisionCrisis.Models
+@using CollisionCrisis.Models.ViewModels
+@addTagHelper *, CollisionCrisis
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
