--- a/wwwroot/css/styles.css
+++ b/wwwroot/css/styles.css
@@ -70,6 +70,12 @@
   box-sizing: border-box;
 }
 
+.addbtn {
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   :root {
     scroll-behavior: smooth;
