--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -6,8 +6,8 @@
 }
 <!--Tableau Section -->
 
-<header class="bg-dark py-5">   
-    <div class="container px-5">       
+<header class="bg-dark py-5">
+    <div class="container px-5">
         <div class="row gx-5 align-items-center justify-content-center">
             <div style="height: 100px; padding: 10px">
                 <h1 class="fw-bolder text-white">About The Crisis</h1>
@@ -16,7 +16,11 @@
                     and tragically shows how devastating the current situation is.
                 </p>
             </div>
-
+        </div>
+    </div>
+    <br /><br />
+    <div class="container px-5">
+        <div class="row gx-5 align-items-center justify-content-center">
             <div class='tableauPlaceholder' id='viz1649267483777' style='width: 100%; height: 50px; float: left;'>
                 <noscript>
                     <a href='#'>
