Reports page progressed

--- a/Views/Admin/Index.cshtml
+++ b/Views/Admin/Index.cshtml
@@ -33,7 +33,7 @@
             </tr>
         </thead>
         <tbody>
-            @foreach (CrashNormal c in Model.CrashNormal)
+            @foreach (CrashNormal c in Model.Crashnormal)
             {
                 <tr>
                     <td>@c.crash_id</td>
