--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                     <li class="nav-item"><a class="nav-link" asp-action="Index" asp-controller="Home">Home</a></li>
                     <li class="nav-item"><a class="nav-link" asp-action="About" asp-controller="Home">About</a></li>
                     <li class="nav-item"><a class="nav-link" asp-action="Reports" asp-controller="Home">Reports</a></li>
-                    <li class="nav-item"><a class="nav-link" asp-action="Login" asp-controller="Home">Login</a></li>
+                    <partial name="_LoginPartial" />
                 </ul>
             </div>
         </div>
